fix : unexpected footer position on mobile view

--- a/src/styles/components/lodgings/_lodgings.scss
+++ b/src/styles/components/lodgings/_lodgings.scss
@@ -15,9 +15,8 @@
     text-align: center;
   }
   @media screen and (max-width: 776px) {
-    padding: 0px;
+    padding: 0px 0px 56px;
     background: transparent;
-    height: 2px;
     h2.errorMessage {
       padding: 0 10%;
       font-size: 1.8rem;
